--- a/weatherappui/src/Components/Forecastcards.css
+++ b/weatherappui/src/Components/Forecastcards.css
@@ -1,6 +1,8 @@
 .forecast-card-container {
   margin: 0;
   padding: 0;
+  text-shadow: 2px 2px 3px rgb(41, 131, 201);
+
 }
 
 .forecast-card {
@@ -16,73 +18,73 @@
 }
 
 .fixed-size-list {
-  width: 810px; 
-  height: 121px; 
-  overflow-y: hidden; 
+  width: 810px;
+  height: 121px;
+  overflow-y: hidden;
   overflow-x: hidden;
 }
 
 .CardInfo {
   width: 100%;
   font-family: monospace;
-  background-color: #a9dce3;
+  background-color: rgba(0, 255, 0, 0.2);
   margin: 0 auto;
 }
 
-
-.cardTitleDiv{
+.cardTitleDiv {
   height: 15px;
 }
+
 .TitleText {
   text-align: center;
   font-size: 20px;
-  color: #7689de;
+  color: #4c5476;
   background-color: #b2dbdd;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .ItemInfo {
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
   align-items: center;
-flex-grow: 1;
+  flex-grow: 1;
 }
 
 .DateText {
-display: inline-flex;
-font-size: 12px;
-color: #7689de;
-flex: 1;
+  display: inline-flex;
+  font-size: 12px;
+  color: #7689de;
+  flex: 1;
 }
 
 .TempDiv {
-display: flex;
-align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .TemperatureText {
-display: inline-block;
-margin-bottom: 0px;
-font-size: 12px;
-color: #7689de;
-margin-left: 10px;
+  display: inline-block;
+  margin-bottom: 0px;
+  font-size: 12px;
+  color: #7689de;
+  margin-left: 10px;
 }
 
 .WeatherDiv {
-display: flex;
-flex-direction: column;
-align-items: center;
-margin-top: -25px;
-text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: -25px;
+  text-align: center;
 }
 
 .WeatherText {
-font-size: 16px;
-margin: -7px;
-color: #7689de;
-white-space: pre-wrap;
+  font-size: 16px;
+  margin: -7px;
+  color: #7689de;
+  white-space: pre-wrap;
 }
 
 .city-icon {
-width: 80px;
+  width: 80px;
 }
